# Caro

./: .gitignore  CMakeLists.txt  README.md
assets/: assets_manifest.txt
include/ai/: AIDifficulty.hpp  HeuristicAIPlayer.hpp  IAIPlayer.hpp  RandomAIPlayer.hpp
include/core/: Board.hpp  Cell.hpp  Game.hpp  GameMode.hpp  GameSnapshot.hpp  GameStatus.hpp  Move.hpp  Player.hpp  SaveError.hpp  SaveManager.hpp  WinChecker.hpp
include/ui/: Application.hpp  BoardView.hpp  Button.hpp  GameplayScreen.hpp  HowToPlayScreen.hpp  Layout.hpp  LoadGameScreen.hpp  MainMenuScreen.hpp  PixelBackground.hpp  ResourceManager.hpp  Screen.hpp  ScreenManager.hpp  SettingsScreen.hpp  SplashScreen.hpp  VictoryScreen.hpp
src/: main.cpp
src/ai/: HeuristicAIPlayer.cpp  RandomAIPlayer.cpp
src/core/: Board.cpp  Game.cpp  SaveManager.cpp  WinChecker.cpp
src/ui/: Application.cpp  BoardView.cpp  Button.cpp  GameplayScreen.cpp  HowToPlayScreen.cpp  LoadGameScreen.cpp  MainMenuScreen.cpp  PixelBackground.cpp  ResourceManager.cpp  ScreenManager.cpp  SettingsScreen.cpp  SplashScreen.cpp  VictoryScreen.cpp
tests/: TestRunner.cpp
